--- a/index.html
+++ b/index.html
@@ -9,22 +9,25 @@
 </head>
 <body>
   <header>
-    <nav>
-      <ul class="nav">
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="why-codepk.html">WHY CODEPK</a></li>
-        <li><a href="rules.html">RULES</a></li>
-        <li><a href="calendar.html">CALENDAR</a></li>
-        <li><a href="register.html">REGISTER</a></li>
-        <li><a href="partners.html">PARTNERS</a></li>
-      </ul>
-    </nav>
+    <div class="logo-bar">
+      <img src="assets/logo.png" alt="codePK Logo" class="logo">
+      <nav>
+        <ul class="nav">
+          <li><a href="#home">HOME</a></li>
+          <li><a href="#why">WHY CODEPK</a></li>
+          <li><a href="#rules">RULES</a></li>
+          <li><a href="#calendar">CALENDAR</a></li>
+          <li><a href="#register">REGISTER</a></li>
+          <li><a href="#partners">PARTNERS</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
   <main>
-    <section class="hero">
+    <section id="home" class="hero">
       <h1>Digital Pakistan Speed Programming Competition (codePK)</h1>
-      <p>A team-based programming competition that fosters problem-solving, programming and teamwork skills.</p>
+      <p>A team-based programming competition that fosters problem-solving, programming, and teamwork skills.</p>
     </section>
 
     <section class="objectives">
@@ -42,27 +45,50 @@
       </ul>
     </section>
 
-    <section class="details">
-      <h2>Languages Supported</h2>
-      <p>Java, C/C++/.Net, Python</p>
-
-      <h2>Format</h2>
-      <p>Online preliminary round followed by an on-site competition for qualifiers.</p>
-
-      <h2>How to Participate</h2>
-      <p>Free registration open till 30th May 2025 for Computer Science/Engineering students.</p>
-
-      <h2>Winning Criteria</h2>
+    <section id="why">
+      <h2>Why Participate in CodePK?</h2>
+      <p>This competition helps display your skills in algorithms, data structures, and problem-solving.</p>
       <ul>
-        <li>Highest Score</li>
-        <li>Quickest Submission</li>
-        <li>Plagiarism-Free Content</li>
+        <li>Enhance coding discipline and time management</li>
+        <li>Add credibility to your resume</li>
+        <li>Free participation, limited seats</li>
       </ul>
+    </section>
 
-      <h2>Awards</h2>
-      <p>Winner: Rs.1,500,000<br>
-         1st Runner-up: Rs.1,000,000<br>
-         2nd Runner-up: Rs.500,000</p>
+    <section id="rules">
+      <h2>Competition Rules</h2>
+      <ul>
+        <li>Teams of up to 3 students</li>
+        <li>Only registered team members can participate</li>
+        <li>Assignments graded by difficulty (Easy to Difficult)</li>
+        <li>Plagiarism will result in disqualification</li>
+        <li>Winners chosen based on scores and submission time</li>
+      </ul>
+    </section>
+
+    <section id="calendar">
+      <h2>Competition Calendar</h2>
+      <ul>
+        <li>Registration: May 15 – 30, 2025</li>
+        <li>Shortlisting: June [TBD], 2025</li>
+        <li>Training: June [TBD], 2025</li>
+        <li>Final Round: June [TBD], 2025</li>
+      </ul>
+    </section>
+
+    <section id="register">
+      <h2>Register for CodePK</h2>
+      <p>Participation is free but seats are limited. Register before May 30, 2025.</p>
+      <p><a href="#">[Registration Link Placeholder]</a></p>
+    </section>
+
+    <section id="partners">
+      <h2>Our Partners</h2>
+      <div class="partners">
+        <img src="assets/partners/partner1.png" alt="Partner 1">
+        <img src="assets/partners/partner2.png" alt="Partner 2">
+        <img src="assets/partners/partner3.png" alt="Partner 3">
+      </div>
     </section>
   </main>
 
